--- a/content/posts/frontend/node/00001.md
+++ b/content/posts/frontend/node/00001.md
@@ -53,3 +53,66 @@ tags: ["node"]
 - https://rfs.jp/sb/javascript/node
 
 - https://medium.com/tensult/basic-concepts-of-node-js-310bb9479fae
+
+# Node.js Install
+## Install for Mac OSX
+### nodebrew install
+
+```bash
+$ brew install nodebrew
+$ nodebrew -v
+nodebrew 1.0.1
+$ nodebrew setup
+```
+
+### node install
+```bash
+$ nodebrew install-binary stable
+$ nodebrew ls
+v10.15.3
+current: none
+$ nodebrew use v10.15.3
+```
+
+### Environment Settings
+```bash
+$ echo "export PATH=\"$HOME/.nodebrew/current/bin:$PATH\"" >> ~/.bashrc
+$ source ~/.bashrc
+$ node -v
+v10.15.3
+$ npm -v
+6.4.1
+```
+
+### Change Node Version
+```bash
+$ nodebrew install-binary latest
+$ nodebrew ls
+v10.15.3
+v12.1.0
+
+current: v10.15.3
+$ nodebrew use v12.1.0
+v10.15.3
+v12.1.0
+
+current: v12.1.0
+```
+
+# ES6
+## 方法1 mjsファイルとして保存しオプションで回避する
+```sample.mjs
+import { readFile } from 'fs';
+
+readFile('test.txt', 'utf-8', function(err, data) {
+    console.log(data);
+})
+```
+
+```
+$ node --experimental-modules sample.mjs
+(node:32569) ExperimentalWarning: The ESM module loader is experimental.
+sample node js document!!
+```
+
+## 方法2
