--- a/content/posts/backend/scala/99999.md
+++ b/content/posts/backend/scala/99999.md
@@ -56,13 +56,7 @@ val glassDrink: Glass[Drink] = new Glass[Water](new Water)
 - その場合共変[+T]することで、サブタイプの関係を型パラメータで定義したクラスに使うことができる
 
 ```scala
-class Glass[+T](var content: T) {
-  def put(t: T): Unit = { content = t }
-  def get: T = content
-}
-```
-
-```scala
+class Glass[+T](content: T)
 val glassDrink: Glass[Drink] = new Glass[Water](new Water)
 ```
 
@@ -70,17 +64,21 @@ val glassDrink: Glass[Drink] = new Glass[Water](new Water)
 - 共変の逆
 
 ```scala
+class Glass[+T](content: T)
 val glassDrink: Glass[Water] = new Glass[Drink](new Drink)
 ```
 
 ## 変異指定
 - サブタイプの関係を、型パラメータのクラスで指定する制約のこと
-- ボトムタイプの`Nothing`型を全ての型にバインドできる
+- Scalaの`immutable`なコレクションは、共変で定義されている（`Seq`、`List`、`Tuple`、`Option`、`Either`、`Try`）
+- 共変にすることでサブタイプの関係を型パラメータにそのまま使うことができる
+- ボトムタイプの`Nothing`型を全ての型にバインドできる  
+
 ```
 Any
- └─AnyVal    | AnyRef
-    └─Unit   |  └─String
-    └─Int    |  └─class
+ └─AnyVal    | ─AnyRef
+    └─Unit   |  └─String ...etc
+    └─Int    |  └─class ...etc
     └─Long   |  └─Null
     └─Double |
     └─Byte   |
