--- a/content/posts/devops/aws/00005.md
+++ b/content/posts/devops/aws/00005.md
@@ -5,14 +5,15 @@ showDate: true
 tags: ["AWS"]
 ---
 
-# サーバレスアーキテクチャの３原則
+# 第1章 サーバレスの世界へ
+## サーバレスアーキテクチャの３原則
 - オンデマンドでサービス実行するために、コンピューティング環境を使う
 - 目的が１つでステートレスな関数を書く
 - プッシュベースのイベント駆動パイブラインを設計する
 - 強力なフロントエンドを作る
 - サードパーティサービスを活用する
 
-# サーバレスアーキテクチャのユースケース
+## サーバレスアーキテクチャのユースケース
 - S3にファイルを保存し、SQSでキューにデータをプッシュし、Lambda関数を起動
 - データ処理、変換、操作、トランスコード
 - CSV、Json、XMLファイルの処理、データ照合、集計、イメージサイズの変更、フォーマット変換
@@ -23,13 +24,14 @@ tags: ["AWS"]
 - Slackなどのボット開発
 - Amazon Echo
 
-# アーキテクチャ
+# 第2章 アーキテクチャとパターン
+## アーキテクチャ
 - バックエンドと、グルー（ワークフローを実行するために組み立てられるパイブライン処理）
 - この２つは、相互補完が可能（組み合わせにて使う）
 - Computer-as-back-end アーキテクチャ
 - フロントエンドがセキュアに通信できるのであれば、分厚いフロントエンドとサードパーティサービスを活用し、イベント駆動パイブラインではなく、サーバレスバックエンドが使われる範囲を極力減らす（ナノ関数ともいう）
 
-# A Clud Guru
+## A Clud Guru
 - フロントエンドは、AngularJSで構築され、Netlifyによってホスティングされている
   - Amazon S3と、Amazon CloudFrontによるグローバルなコンテンツデリバリーネットワークに変更もできる
 - 登録、認証機能のためにAuth0を使っている
@@ -37,13 +39,13 @@ tags: ["AWS"]
 - Firebase（リアルタイムデータベース）
   - クライアントは、それぞれウェブソケットを使ってFirebaseと接続し、ほぼリアルタイムでFirebaseから更新情報を受け取る
 
-# Instant
+## Instant
 - TODO
 
-# ハイブリッドサーバレスとレガシーAPI
+## ハイブリッドサーバレスとレガシーAPI
 - TODO
 
-# GraphQL
+## GraphQL
 - 複数のラウンドトリップ、オーバーフェッチ、バージョニングに弱点のあるRESTに替わるものとして設計された（2012年〜2015年 Facebook社）
 - 単一のエンドポイントで、宣言的な階層構造でクエリを実行する方法を提供している
   - １つのGraphQL Lambda関数だけで複数のデータソースにクエリを送ることが可能
@@ -55,5 +57,33 @@ http://kevinold.com/2016/02/01/serverless-graphql.html
 
 https://medium.com/scaphold/pok/%C3A9mon-go-and-graphql-widh-aws-lambda-a6d53f254424
 
-# サンプル実装
+## サンプル実装
 - 動画を別の形式にトランスコードするパイプライン処理
+
+# 第3章 サーバレスアプリケーションの構築
+- 24 Hour Video
+- アップロードされた動画を入力として、様々な形式のビットレートにトランスコードするイベント駆動パイプライン処理を実装
+
+## 事前準備
+### IAMの作成
+- アクセス権限の設定せずにIAMユーザを作成する
+- 作成したユーザのアクセス権限設定より、インラインポリシーの追加を以下の通り行う
+
+```
+サービス: Lambda
+アクション: GetFunction(読み込み)、UpdateFunctionCode(書き込み)、UpdateFunctionConfiguration(書き込み)
+リソース: 指定 + すべて
+名前: Lambda-Upload-Policy
+```
+
+### S3バケットの作成
+以下の2つのバケット作成する
+- アップロード用の格納先
+- Amazon Elastic Transcoderがトランスコードした動画の格納先
+
+### IAMロールの作成
+```
+AWS サービス: Lambda
+アクセス権限ポリシー: AWSLambdaExecute、AmazonElasticTranscoder_JobsSubmitter
+ロール名: lambda-s3-execution-role
+```
