--- a/content/posts/other/network/00002.md
+++ b/content/posts/other/network/00002.md
@@ -203,6 +203,9 @@ tags: ["network"]
 # DNS
 - Domain Name System
 - ドメイン名をIPアドレスに変換するシステム
+- DNSサーバ
+  - フルサービスリゾルバ（DNSキャッシュサーバ）
+  - 権威DNSサーバ（DNSコンテンツサーバ）
 
 ## DNSレコード
 ### Aレコード
@@ -238,6 +241,14 @@ www.hoge.com. IN CNAME hoge.com.
 - hoge.co.jp = 192.168.1.1, 192.168.1.2, 192.168.1.3
 - ドメインへのアクセス時には、n のサーバへ負荷分散される
 - RFC3484
+
+## NSレコード
+- 権威DNSサーバが使うゾーンファイルの中身
+- 管理を委託しているDNSサーバ名が記載されている
+
+```
+example.com IN NS ns1.example.com
+```
 
 ---
 
