--- a/content/posts/other/communication/00001.md
+++ b/content/posts/other/communication/00001.md
@@ -92,11 +92,20 @@ tags: ["Agile"]
 
 # スクラムリファレンスカード
 - http://scrumreferencecard.com/ScrumReferenceCard_v1_3_jp.pdf
-- TODO
 
-## HOGE
-## HOGE
-## HOGE
+## ロールとイベント
+### 開発メンバー
+- それぞれのメンバーに決定権を持っている
+- リーダーシップを発揮する
+
+### プロダクトオーナー
+- ステークホルダーに対してリーダーシップを発揮する
+- 要求に関する最終的な決定権
+
+### スクラムマスター
+- スクラムの環境作り
+- サーバンドリーダーシップ
+- チームに対してマネジメント権限を持たない
 
 # スクラムと組織
 - https://www.slideshare.net/Ryuzee/scrum-8260474
@@ -152,8 +161,6 @@ tags: ["Agile"]
 - 内容
   - 「昨日やったこと」、「今日やること」、「困っていること」
   - 前回のミーティングから変わった点
-
-
 
 ## スクラム開発チーム
 - クロスファンクショナル
