--- a/content/posts/devops/aws/00008.md
+++ b/content/posts/devops/aws/00008.md
@@ -19,3 +19,84 @@ tags: ["AWS"]
 
 
 # サブドメイン
+- サブドメインの`HostZone`を作成する
+  - Aレコードも作成しておく
+
+- 確認
+
+- 権限委譲
+
+- 確認
+
+```
+$ dig xxx.xxx.xxx +noedns
+; <<>> DiG 9.10.6 <<>> xxx.xxx.xxx +noedns
+;; global options: +cmd
+;; Got answer:
+;; ->>HEADER<<- opcode: QUERY, status: NXDOMAIN, id: 54046
+;; flags: qr rd ra; QUERY: 1, ANSWER: 0, AUTHORITY: 1, ADDITIONAL: 0
+
+;; QUESTION SECTION:
+;xxx.xxx.xxx.		IN	A
+
+;; AUTHORITY SECTION:
+xxx.xxx.xxx.		600	IN	SOA	hoge.com.
+// . . . . .
+```
+
+```
+$ dig xxx.xxx.xxx +noedns
+```
+
+
+# nginx
+
+## Install
+### Success
+```
+$ sudo amazon-linux-extras install nginx1.12
+$ nginx -v
+nginx version: nginx/1.12.2
+```
+
+### failure
+```
+$ sudo yum install nginx
+読み込んだプラグイン:extras_suggestions, langpacks, priorities, update-motd
+パッケージ nginx は利用できません。
+エラー: 何もしません
+```
+
+## Run
+```
+$ ps aux | grep nginx
+ec2-user  3587  0.0  0.0 119484   948 pts/0    S+   04:46   0:00 grep --color=auto nginx
+$ sudo service nginx start
+Redirecting to /bin/systemctl start nginx.service
+$ ps aux | grep nginx
+root      3639  0.0  0.2 121492  2172 ?        Ss   04:47   0:00 nginx: master process /usr/sbin/nginx
+nginx     3640  0.0  0.4 121952  4932 ?        S    04:47   0:00 nginx: worker process
+ec2-user  3654  0.0  0.0 119484   972 pts/0    S+   04:47   0:00 grep --color=auto nginx
+```
+
+- Access Public IP
+  - view nginx page!!
+
+
+# EC2 Settings
+
+```
+$ sudo cat /etc/sysconfig/network
+NETWORKING=yes
+NOZEROCONF=yes
+
+$ sudo cat /etc/hosts
+127.0.0.1   localhost localhost.localdomain localhost4 localhost4.localdomain4
+::1         localhost6 localhost6.localdomain6
+
+$ sudo cat /etc/sysconfig/i18n
+LANG="en_US.UTF-8"
+
+$ ll /usr/share/zoneinfo/Japan
+$ ll /etc/localtime
+```
