--- a/content/posts/backend/python/00001.md
+++ b/content/posts/backend/python/00001.md
@@ -17,8 +17,8 @@ Homebrew
 ## Python
 ```
 $ brew install python3
-$ witch python3
-$ witch pip3
+$ which python3
+$ which pip3
 ```
 
 ## Libraries
