--- a/content/posts/devops/aws/00005.md
+++ b/content/posts/devops/aws/00005.md
@@ -60,6 +60,10 @@ https://medium.com/scaphold/pok/%C3A9mon-go-and-graphql-widh-aws-lambda-a6d53f25
 ## サンプル実装
 - 動画を別の形式にトランスコードするパイプライン処理
 
+## パターン
+### Command パターン
+- TODO
+
 # 第3章 サーバレスアプリケーションの構築
 - 24 Hour Video
 - アップロードされた動画を入力として、様々な形式のビットレートにトランスコードするイベント駆動パイプライン処理を実装
