--- a/content/posts/other/00002.md
+++ b/content/posts/other/00002.md
@@ -9,16 +9,17 @@ tags: ["dev", "AWS"]
 - 動画共有サイトの構築
 - YouTubeのミニクローン
 
-# 事前環境設定
-## 前提
+# 1.事前環境設定
+## 1.1.前提
 - AWS Accout Created.
 - AWS CLI Installed.
 - node.js Installed.
 
-## IAMの作成
-- アクセス権限の設定せずにIAMユーザを作成する
-- 作成したユーザのアクセス権限設定より、インラインポリシーの追加（Lambda関数デプロイ権限ポリシー）を以下の通り行う
 
+## 1.2.IAMの作成
+- アクセス権限の設定せずにIAMユーザを作成
+- 作成したユーザのアクセス権限設定より、インラインポリシーを追加（Lambda関数デプロイ権限ポリシー）（以下の設定）
+- AWS CLIのユーザ認証の設定(aws configure)を行う
 ```
 サービス: Lambda
 アクション: GetFunction(読み込み)、UpdateFunctionCode(書き込み)、UpdateFunctionConfiguration(書き込み)
@@ -26,28 +27,26 @@ tags: ["dev", "AWS"]
 名前: Lambda-Upload-Policy
 ```
 
-- AWS CLIのユーザ認証の設定(aws configure)を行う
 
-## Lambda関数デプロイ権限ポリシーのアタッチ
-- IAMユーザを選択し、「アクセス権限」タブから「インラインポリシーの追加」を選択
-- 「ビジュアルエディタ」タブから、「サービスの選択」→「Lambda」を選択し、「アクション選択」から以下を選択
+## 1.3.Lambda関数デプロイ権限ポリシーのアタッチ
+- `IAMユーザ` → `アクセス権限タブ` → `インラインポリシーの追加` → `ビジュアルエディタタブ` → `サービスの選択` → `Lambda` → `アクション選択`
 
-## S3バケットの作成
-以下の2つのバケット作成する
+
+## 1.4.S3バケットの作成
 - アップロード用の格納先: XXX-upl
-- 「Amazon Elastic Transcoder」がトランスコードした動画の格納先: XXX-trs
+- トランスコード用の格納先: XXX-trs
 
-## IAMロールの作成
+
+## 1.5.IAMロールの作成
 ```
 AWS サービス: Lambda
 アクセス権限ポリシー: AWSLambdaExecute、AmazonElasticTranscoder_JobsSubmitter
 ロール名: lambda-s3-execution-role
 ```
 
-## Lambda関数の設定
-- `Lambda`コンソールより、「Create Function」
-- 一から作成
 
+## 1.6.Lambda関数の設定
+- `Lambda`コンソールより → `Create Function` → `一から作成` → `関数の作成`
 ```
 関数名: transcode-video
 ランタイム: Node.js XX.X
@@ -56,12 +55,10 @@ AWS サービス: Lambda
   既存のロール: lambda-s3-execution-role
 ```
 
-- 関数の作成
 
-## Amazon Elastic Transcoderの設定
-- `Elastic Transcoder`コンソールより、「Create a new Pipeline」
-
-```yml
+## 1.7.Amazon Elastic Transcoderの設定
+- `Elastic Transcoder` → `Create a new Pipeline` → `Create Pipeline`
+```
 Create New Pipeline:
   Pipeline Name: 24 Hour Video
   Input Bucket: XXX-upl
@@ -74,12 +71,9 @@ Configuration for Amazon S3 Bucket for Thumbnails:
   Storage Class: Standard
 ```
 
-- Create Pipeline
 
-## npmの設定
-- PROJECTフォルダの作成
-- `transcode-video`ディレクトリの作成
-- package.jsonの作成
+## 1.8.NPMの設定
+- `transcode-video`ディレクトリ & `package.json`の作成
 ```
 {
   "name": "transcode-video",
@@ -98,26 +92,39 @@ Configuration for Amazon S3 Bucket for Thumbnails:
 ```
 - `$ npm install`
 
-# function
-## index.js
-- TODO link
 
-## Local Test
-- テストモジュールのインストール
-  - `$ npm install run-local-lambda --save-dev`
-  - `$ npm install aws-sdk`
-- pakcage.jsonの内容を変更
-  - `"test": "run-local-lambda --file index.js --event tests/event.json"`
-- イベントオブジェクト定義ファイルの作成
-  - `$ mkdir tests`
-  - `$ vi event.json` // TODO link souce code
+# 2.トランスコード処理
+- [Source Code](TODO)
 
-## Deployment
-- `package.json` // TODO link souce code
-- `$ npm run deploy`
 
-## S3のトリガー設定
-- S3コンソールより、`XXX-upl`バケットを選択し、「プロパティ」→「Events」→「通知の追加」
+## 2.1.ローカルの単体テスト
+### テストモジュールのインストール
+```bash
+$ npm install run-local-lambda --save-dev
+$ npm install aws-sdk
+```
+
+### pakcage.jsonの内容を変更
+- `"test": "run-local-lambda --file index.js --event tests/event.json"`
+
+### イベントオブジェクト定義ファイルの作成
+- [Source Code](TODO)
+```bash
+$ mkdir tests
+$ vi event.json
+```
+
+
+## 2.2.Lambdaへのデプロイ
+- [Source Code](TODO)
+```
+$ vi package.json
+$ npm run deploy
+```
+
+
+## 2.3.S3のトリガー設定
+- `S3コンソール` → `アップロード用バケットを選択` → `プロパティ` → `Events` → `通知の追加`
 ```
 名前: Transcode Video
 イベント: すべてのオブジェクト作成イベント
@@ -125,35 +132,32 @@ Configuration for Amazon S3 Bucket for Thumbnails:
   Lambda関数: transcode-video
 ```
 - 保存（[アクセス権限エラーが発生した場合](#アクセス権限エラーが発生した場合)）
+- `S3コンソール` → `アップロードバケット` → mp4ファイル形式の動画をアップロードする
 
 ### アクセス権限エラーが発生した場合
-- Lambdaコンソールより、「transcode-video」を選択し、「Designer」の左側にある「トリガーの追加」から「S3」を選択する
-- 下部の「トリガーの設定」より以下を設定
+- `Lambdaコンソール` → `transcode-video` → `Designer(トリガーの追加) → `S3`
 ```
 バケット: XXX-upl
 イベントタイプ: すべてのオブジェクトの作成イベント
 ```
-- 「追加」→「保存」
-- S3コンソールより、`XXX-upl`バケットを選択し、「プロパティ」→「Events」→「通知の追加」
+- `追加` → `保存`
+- `S3コンソール` → `アップロードバケット` → プロパティ` → `Events` → `通知の追加`
 - 先ほど作成したイベントが残っているため、名前を修正して保存する
 ```
 名前: Transcode Video
 ```
 
-## AWS Test
-- S3コンソールより、`XXX-upl`バケットを選択し、mp4動画をアップロードする
 
-# SNS通知
-## トピックの作成
-- SNSコンソールより、「トピック」→「新しいトピックの作成」
+# 3.SNS通知
+## 3.1.トピックの作成
+- `SNSコンソール` → `トピック` → `新しいトピックの作成` → `トピックの作成`
 ```
 トピック: transcoded-video-notifications
 ```
-- トピックの作成
 
-## SNSのS3接続設定
-- SNSコンソールより、作成したトピックを選択する
-- 「編集」から「アクセスポリシー」の以下の部分を変更する
+
+## 3.2.SNSのS3接続設定
+- `SNSコンソール` → `作成したトピックを選択する` → `編集` → `アクセスポリシーの以下の部分を変更する`
 ```Before
 "Condition": {
   "StringEquals": {
@@ -168,10 +172,10 @@ Configuration for Amazon S3 Bucket for Thumbnails:
   }
 }
 ```
-- 変更の保存
 
-## S3に設定を追加
-- 「トランスコード済みバケット」→「プロパティ」→「Events」→「通知の追加」
+
+## 3.2.S3に設定を追加
+- `トランスコード済みバケット` → `プロパティ` → `Events` → `通知の追加`
 ```
 名前: Transcoded Video
 イベント: すべてのオブジェクト作成イベント
@@ -179,18 +183,53 @@ Configuration for Amazon S3 Bucket for Thumbnails:
 送信先:
   SNSトピック: transcoded-video-notifications
 ```
-- 「保存」
 
-## slack
+### Slack通知の設定
 - TODO
 
-# アクセス権限の変更
+
+# 3.アクセス権限の変更
 ## Lambda関数
 - `set-permissions`
+- TODO
 
 
+# 4.メタデータ生成
+## 4.1.Lambda関数の作成
+- extract-metadata
+```
+メモリ: 256MB
+タイムアウト: 3分
+```
+
+### 関数の作成
+- `set-permissions`を`extract-metadata`にリネーム
+```
+$ cp -rf set-permissions extract-metadata
+```
+- `package.json`の`scripts.deploy`の`funciton name`のArnを変更する
+- [Source Code](TODO)
+
+- デプロイする
 
 
-# 認証
+## 4.2.ffmpeg Install for Mac
+- `https://ffmpeg.org/download.html` → `Linux Static Builds` → `ffmpeg-git-amd64-static.tar.xz - md5`
+```
+$ mkdir extract-metadata/bin
+$ tar xvfJ ffmpeg-git-amd64-static.tar.xz
+$ cp ffmpeg-git-20190521-amd64-static/ffprobe extract-metadata/bin
+```
 
+## 4.3.SNSのトピックのサブスクライブ設定
+- `SNSコンソール` → `トピック` → `transcoded-video-notifications` → `サブスクリプション作成`
+```
+プロトコル: AWS Lambda
+エンドポイント: arn:aws:lambda:ap-northeast-1:XXXXXXXXXX:function:extract-metadata
+```
+
+
+# 5.認証
 `$ npm install local-web-server --save-dev`
+
+# 7.API Gateway
