--- a/content/posts/backend/spark/00002.md
+++ b/content/posts/backend/spark/00002.md
@@ -23,5 +23,29 @@ tags: ["Spark"]
 - TODO
 
 # 分散処理環境
-## クラスタ管理システム
-- YARN, Mesos, Spark Standalone
+### クラスタ管理システム(YARN, Mesos, Spark Standalone)
+- マスターノード
+  - クラスタ内の計算リソースを集中管理する
+- ワーカーノード
+  - CPU、メモリを提供し、割り当てられた処理を行う
+
+クラスタ上で次のプロセスによって分散処理が実施される
+
+### アプリケーションのデプロイ
+  - Sparkアプリケーションをクライアントがクラスタにデプロイする
+  - クライアントは、上記の処理と同時にエグゼキュータ（プロセス）のスペック（CPUコア数やメモリ）を指定する
+### 計算リソースの確保
+  - マスターノードは、各ワーカーノードの空のリソース量とクライアントから要求されているエグゼキュータのスペックを考慮し、1つ以上のワーカーノードにエグゼキュータの起動を要求する
+### ドライバプログラムの起動
+  - Sparkアプリケーションのエントリポイント
+  - クライアント上で起動するか、ワーカーノード上で起動するかオプションによって制御可能
+  - スケジューラが含まれる
+### タスクのスケジューリングと実行
+  - RDDの生成からアクションの適用までを「ジョブ」という処理単位として扱う
+  - ジョブは、ドライバプログラムに含まれるスケジューラによって、エグゼキュータが処理可能な「タスク」と呼ばれる単位に分割される
+  - タスクはパーティションの単位でデータロード・変換・アクションを適用する処理単位
+  - エグゼキュータが個々のタスクを処理する
+
+# ドライバプログラム
+- Sparkアプリケーションの動作を制御するのはドライバプログラム
+- ドライバプログラムにRDDの生成・変換およびアクションのロジックなどを記述する
