Add python learning

--- a/content/posts/backend/python/00002.md
+++ b/content/posts/backend/python/00002.md
@@ -4,3 +4,311 @@ date: 2019-06-01T17:00:00+09:00
 showDate: true
 tags: ["python"]
 ---
+
+# コーディングスタイル
+- コメント
+  - 基本は対象行の上段に記載する（ソースコードの右ではない）
+
+- 1行が長くなる場合
+  - 80文字以上は改行する
+
+- インデント
+  - スペース4つ
+
+- デフォルト引数にリストを定義しない
+  - 参照渡しのため、副作用があり、共有してしまうため
+
+- Docstrings
+  - 関数内に記載する
+```
+def example_func(param1, param2):
+    """Example function with types documented in the docstring.
+
+    Args:
+        param1 (int): The first parameter.
+        param2 (str): The second parameter.
+
+    Retruns:
+      bool: The return value. True for success, False otherwise.
+    """
+    print(param1)
+    print(param2)
+    return True
+
+print(example_func.__doc__)
+```
+
+# 関数
+## 定義
+
+- 関数を定義して使用する
+```python
+def say_something():
+    print('Hi')
+
+say_something()
+
+# Hi
+```
+
+- 関数を変数にバインドさせて使用する
+```python
+def say_something():
+    print('Hi')
+
+f = say_something
+f()
+
+# Hi
+```
+
+- タプルを関数の引数として渡す
+```python
+def say_something(*args):
+    for arg in args:
+        print(arg)
+
+t = ('Hi!', 'Mike', 'Nance')
+say_something(*t) # タプル't'は、展開されて渡される
+
+# Hi!
+# Mike
+# Nance
+```
+
+- キーワード引数の辞書化
+```python
+def menu(**kwargs):
+    print(kwargs)
+
+menu(entree='beef', drink='coffee')
+
+# {'entree': 'beef', 'drink': 'coffee'}
+```
+
+- キーワード引数の辞書化＋ループ処理
+```python
+def menu(**kwargs):
+  for k, v in kwargs.items():
+      print(k, v)    
+
+menu(entree='beef', drink='coffee')
+
+# entree beef
+# drink coffee
+```
+
+- 組み合わせ
+```python
+def menu(food, *args, **kwargs):
+    print(food)
+    print(args)
+    print(kwargs)
+
+menu('apple', 'banana', 'orange', entree='beef', drink='coffee')
+
+# apple
+# ('banana', 'orange')
+# {'entree': 'beef', 'drink': 'coffee'}
+
+```
+
+## enumerate
+- リストの拡張for文の取り出し結果にインデックスを付与する
+
+```python
+for i, fruit in enumerate(['apple', 'banana', 'orange']):
+    print(i, fruit)
+
+# 0 apple
+# 1 banana
+# 2 orange
+```
+
+## zip
+- リストの拡張for文の取り出しをマージする
+
+```python
+days = ['Mon', 'Tue', 'Wed']
+fruits = ['apple', 'banana', 'orange']
+drinks = ['coffee', 'tea', 'bear']
+
+for day, fruits, drinks in zip(days, fruits, drinks):
+    print(day, fruits, drinks)
+
+# Mon apple coffee
+# Tue banana tea
+# Wed orange bear
+```
+
+## クロージャー
+```python
+def outer(a, b):
+    def inner():
+        return a + b
+    return inner
+
+f = outer(1,2)
+r = f()
+print(r)
+
+# 3
+```
+
+```python
+def circle_area_func(pi):
+    def circle_area(radius):
+        return pi * radius * radius
+    return circle_area
+
+ca1 = circle_area_func(3.14)
+ca2 = circle_area_func(3.141592)
+print(ca1(10))
+print(ca2(10))
+
+# 314.0
+# 314.1592
+```
+
+## デコレーター
+- 関数の前後に関数を定義する
+```python
+def print_info(func):
+    def wrapper(*args, **kwargs):
+        print('start')
+        result = func(*args, **kwargs)
+        print('end')
+        return result
+    return wrapper
+
+
+def add_num(a, b):
+    return a + b
+
+f = print_info(add_num)
+r = f(10, 20)
+print(r)
+
+# start
+# end
+# 30
+```
+
+- 簡略形
+```python
+def print_info(func):
+    def wrapper(*args, **kwargs):
+        print('start')
+        result = func(*args, **kwargs)
+        print('end')
+        return result
+    return wrapper
+
+@print_info
+def add_num(a, b):
+    return a + b
+
+r = add_num(10, 20)
+print(r)
+```
+
+- 複数のデコレーター（順序が大切！！）
+```python
+def print_info(func):
+    def wrapper(*args, **kwargs):
+        print('start')
+        result = func(*args, **kwargs)
+        print('end')
+        return result
+    return wrapper
+
+def print_more(func):
+    def wrapper(*args, **kwargs):
+        print('func:', func.__name__)
+        print('args:', args)
+        print('kwargs:', kwargs)
+        result = func(*args, **kwargs)
+        print('result:', result)
+        return result
+    return wrapper
+
+@print_info
+@print_more
+def add_num(a, b):
+    return a + b
+
+r = add_num(10, 20)
+print(r)
+```
+
+## ラムダ
+```python
+l = ['Mon', 'tue', 'Wed', 'Thu', 'fri', 'sat', 'Sun']
+
+def change_words(words, func):
+    for word in words:
+        print(func(word))
+
+# def sample_func(word: str):
+#     return word.capitalize()
+# sample_func = lambda word: word.capitalize()
+
+change_words(l, lambda word: word.capitalize())
+change_words(l, lambda word: word.lower())
+```
+
+## ジェネレータ
+```python
+l = ['Good morning', 'Good afternoon', 'Good night']
+
+for i in l:
+    print(i)
+
+print('########################')
+
+def greeting():
+    yield 'Good morning'
+    yield 'Good afternoon'
+    yield 'Good night'
+
+# for g in greeting():
+#     print(g)
+
+g = greeting()
+print(next(g))
+print(next(g))
+print(next(g))
+
+# Good morning
+# Good afternoon
+# Good night
+# ########################
+# Good morning
+# Good afternoon
+# Good night
+```
+
+```python
+def counter(num=10):
+    for _ in range(num):
+        yield 'run'
+
+def greeting():
+    yield 'Good morning'
+    yield 'Good afternoon'
+    yield 'Good night'
+
+# for g in greeting():
+#     print(g)
+
+g = greeting()
+c = counter()
+
+print(next(g))
+print(next(g))
+print(next(g))
+
+print(next(c))
+print(next(c))
+print(next(c))
+```
