--- a/content/posts/backend/python/00002.md
+++ b/content/posts/backend/python/00002.md
@@ -1,5 +1,5 @@
 ---
-title: Python
+title: Python 基本構文
 date: 2019-06-01T17:00:00+09:00
 showDate: true
 tags: ["python"]
@@ -311,4 +311,93 @@ print(next(g))
 print(next(c))
 print(next(c))
 print(next(c))
+```
+
+## 内包表記
+- リスト内包表記
+```python
+t = (1,2,3,4,5)
+r = []
+
+r = [i for i in t if i % 2 == 0]
+print(r)
+```
+
+- 辞書内包表記
+```python
+w = ['mon', 'tue', 'wed']
+f = ['coffee', 'milk', 'water']
+
+d = {x: y for x, y in zip(w, f)}
+print(d)
+```
+
+- 集合内包表記
+```python
+s = set()
+
+s = {i for i in range(10)}
+print(s)
+```
+
+- ジェネレーター
+```Python
+g = (i for i in range(10))
+# g = tuple(i for i in range(10))
+print(type(g))
+# print(next(g))
+```
+
+## 名前空間とスコープ
+```python
+animal = 'cat'
+
+def f():
+
+    animal = 'doc'
+    print('local', animal)
+    print('local', locals())
+
+f()
+print('global', animal)
+print('global', globals())
+```
+
+## 例外処理
+```python
+l = [1, 2, 3]
+i = 5
+# del l
+
+try:
+    l[0]
+    # l[i]
+    # () + l
+except IndexError as ex:
+    print("Dont't worry {}".format(ex))
+except NameError as ex:
+    print(ex)
+except Exception as ex:
+    print("Other {}".format(ex))
+  else:
+      print('done') # 成功した場合にのみ実行
+finally:
+    print('clean up')
+
+```
+
+## 独自例外の実装
+```python
+class UppercaseError(Exception):
+    pass
+
+def check():
+    words = ['apple', 'ORANGE', 'banana']
+    for word in words:
+        if word.isupper():
+            raise UppercaseError(word)
+try:
+    check()
+except UppercaseError as ex:
+    print('This is my fault. Go next')
 ```
