--- a/content/posts/backend/scala/00005.md
+++ b/content/posts/backend/scala/00005.md
@@ -1,9 +1,16 @@
 ---
-title: Scala まとめ
+title: Scala コップ本
 date: 2018-10-22T08:20:00+09:00
 showDate: true
 tags: ["Scala"]
 ---
+
+### 1.1.1 新しい型を作れる言語
+BigInt
+
+
+
+
 
 # object
 ## 用途
