--- a/content/posts/other/communication/00001.md
+++ b/content/posts/other/communication/00001.md
@@ -54,6 +54,22 @@ tags: ["Agile"]
 - 開発者が決定すべきではないことを決定しよう
 - 設計の出発地点では、戦術的設計よりも個々の責務の観点から考えるクラス設計の方が効果的である
 
+## 5章 アジャイルなフィードバック
+- 自動化されたユニットテストを使い素早いフィードバックを得る
+  - ユニットテストはリグレッションテストとしても使える
+  - ユニットテストは開発者の自信（心理的な安全性を含む）を得る
+  - ユニットテストは最も信頼できるドキュメントである
+- 'Eat your own dog food.' 自分の製品をベストなものにしたければ、自分で積極的に使う
+- 作る前から使う＝TDDを取り入れる
+- プラットフォームのテストはCIでカバーでする
+- バックログを使って実作業の時間とチーム・自分の生産性をフィードバックする
+
+## 6章 アジャイルなコーディング
+- 巧妙であるよりも明瞭であれ「意図明確に表現するコードを書くこと」(PIE...Program Intently and Expressively)
+- 書きやすさよりも読みやすさを重視する
+- メソッド、関数をコマンドか問い合わせのどちらかに分類する(Tell, Don't Ask)
+- リスコフの置換原則を使って、コードをアップデートする(ex, Compositon, Delegation)
+
 # アジャイルソフトウェア開発
 - [書籍](https://www.amazon.co.jp/%E3%82%A2%E3%82%B8%E3%83%A3%E3%82%A4%E3%83%AB%E3%82%BD%E3%83%95%E3%83%88%E3%82%A6%E3%82%A7%E3%82%A2%E9%96%8B%E7%99%BA-Agile-Software-Development-%E3%82%A2%E3%83%AA%E3%82%B9%E3%82%BF%E3%83%BC%E3%83%BB%E3%82%B3%E3%83%BC%E3%83%90%E3%83%BC%E3%83%B3/dp/4894715791/ref=sr_1_9?adgrpid=58790195448&gclid=EAIaIQobChMI1Iaw6q2N4gIVT3RgCh1YSg4sEAAYASAAEgKCpPD_BwE&hvadid=338568398636&hvdev=c&hvlocphy=1009308&hvnetw=g&hvpos=1t1&hvqmt=b&hvrand=11229732882762838355&hvtargid=kwd-325423537670&hydadcr=27266_11561145&jp-ad-ap=0&keywords=%E3%82%A2%E3%82%B8%E3%83%A3%E3%82%A4%E3%83%AB%E3%82%BD%E3%83%95%E3%83%88%E3%82%A6%E3%82%A7%E3%82%A2%E9%96%8B%E7%99%BA&qid=1557367448&s=gateway&sr=8-9)
 
